--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </div>
 
     <p class="text-xs text-slate-400 mb-2">
-      Top Guesses
+      Closest Paragraphs
     </p>
 
     <div id="article-list"
