update intro message

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <li>Each guess must be an existing Wikipedia article.</li>
           <li>The game tells you how close you are to the Article of the Day.</li>
           <li>Paragraphs from the articles you guess are scored individually.</li>
-          <li>Start typing and then pick from the provided list!</li>
+          <li>The closer you get to zero, the better!</li>
         </ul>
       </div>
     </div>
