--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WikiGuess &mdash; Daily Wikipedia Game</title>
+  <title>WikiGuess &mdash; Daily Game</title>
   <meta name="description" content="Play WikiGuess, a daily game based on Wikipedia. Each guess you make gives you a hint about the article of the day!">
   <link rel="canonical" href="https://wiki-guess.com/">
   <meta property="og:type" content="game" />
