--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <meta property="og:type" content="game" />
   <meta property="og:title" content="WikiGuess &mdash; Daily Wikipedia Game" />
   <meta property="og:description" content="Each guess you make gives you a hint about the article of the day!" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="output.css">
 </head>
 
 <!-- Google tag (gtag.js) -->
