--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="tailwind.css">
 </head>
 
-<img class="hidden absolute" id="lastGuessImage" src=""></img>
+<img class="hidden absolute" id="lastGuessImage" alt="Background image." src=""></img>
 
 <body class="h-dvh bg-slate-900 text-white flex flex-col">   
   <!-- Intro Modal -->
@@ -39,7 +39,7 @@
         <h2 id="howto-title" class="text-2xl font-extrabold tracking-tight mb-3">
           How To Play
         </h2>
-        <img class="h-48 w-full object-cover mb-4" src="logo.png">
+        <img class="h-48 w-full object-cover mb-4" alt="Portrait of Lincoln." src="logo.png">
         <p id="howto-desc" class="mb-4">
           Find the Article of the Day!
         </p>
@@ -88,7 +88,7 @@
         <h2 class="text-2xl font-extrabold tracking-tight leading-tight mb-3">
           You got it!
         </h2>
-        <img class="w-full max-w-2xl object-cover mb-4" id="winImage" src=""></img>
+        <img class="w-full max-w-2xl object-cover mb-4" id="winImage" alt="Image of daily article." src=""></img>
         <p id="winModalTitle" class="mb-2 text-xl font-bold"></p>
         <p id="winModalDesc" class="text-lg text-sky-50/90">
           Guesses:
