--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h2 id="howto-title" class="text-2xl font-extrabold tracking-tight mb-3">
           How To Play
         </h2>
-        <img class="h-48 w-full object-cover mb-4" alt="Portrait of Lincoln." src="logo.png">
+        <img class="h-48 w-full object-cover mb-4" alt="Portrait of Lincoln." src="logo.webp">
         <p id="howto-desc" class="mb-4">
           Find the Article of the Day!
         </p>
