--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="canonical" href="https://wiki-guess.com/">
   <meta property="og:type" content="game" />
   <meta property="og:title" content="WikiGuess &mdash; Daily Wikipedia Game" />
-  <meta property="og:description" content="Each guess you make gives you a hint about the article of the day!" />
+  <meta property="og:description" content="Play WikiGuess, a daily game based on Wikipedia. Each guess you make gives you a hint about the article of the day. Powered by dense vector search." />
   <meta property="og:image" content="https://wiki-guess.com/lincoln_portrait.jpg">
   <meta property="og:image:width" content="2200">
   <meta property="og:image:height" content="1190">
