--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WikiGuess &mdash; Daily Game</title>
 
-  <meta name="description" content="Play WikiGuess, a daily game based on Wikipedia. Each guess you make gives you a hint about the article of the day. Powered by dense vector search.">
+  <meta name="description" content="Play WikiGuess, a daily game where you use semantic search to find the article of the day. Each guess reveals subtle clues about your target.">
   <link rel="canonical" href="https://wiki-guess.com/">
   <meta property="og:type" content="game" />
-  <meta property="og:title" content="WikiGuess &mdash; Daily Wikipedia Game" />
-  <meta property="og:description" content="Play WikiGuess, a daily game based on Wikipedia. Each guess you make gives you a hint about the article of the day. Powered by dense vector search." />
+  <meta property="og:title" content="WikiGuess &mdash; Daily Game" />
+  <meta property="og:description" content="Play WikiGuess, a daily game where you use semantic search to find the article of the day. Each guess reveals subtle clues about your target." />
   <meta property="og:image" content="https://wiki-guess.com/lincoln_portrait.jpg">
   <meta property="og:image:width" content="2200">
   <meta property="og:image:height" content="1190">
@@ -49,12 +49,12 @@
         </h2>
         <img class="h-48 w-full object-cover mb-4" alt="Portrait of Lincoln." src="lincoln_portrait.jpg">
         <p id="howto-desc" class="mb-4">
-          Find the Article of the Day!
+          Find the article of the day!
         </p>
         <ul class="list-disc space-y-3 pl-5 marker:text-neutral-200">
           <li>Each guess must be an existing Wikipedia article.</li>
-          <li>The game tells you how close you are to the Article of the Day.</li>
-          <li>Paragraphs from the articles you guess are scored individually.</li>
+          <li>The game tells you how close you are to the article of the day.</li>
+          <li>Paragraphs from your guesses are ranked by how similar they are to the target.</li>
           <li>The closer you get to zero, the better!</li>
         </ul>
       </div>
