Make character limit respond to screen size.

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         px-3 py-1 rounded border border-white-600 text-white"
         id="lastGuessBox"
       >
-        <span id="lastGuessText" class="uppercase tracking-wide">...</span>
-        <span id="lastGuessDistance">...</span>
+        <span id="lastGuessText" class="uppercase tracking-wide">&nbsp;</span>
+        <span id="lastGuessDistance">&nbsp;</span>
     </div>
 
     <p class="text-xs text-slate-400 mb-2">
