--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WikiGuess &mdash; Daily Game</title>
+  <title>Paragraphle &mdash; Daily Game</title>
 
-  <meta name="description" content="Play WikiGuess, a daily game where you use semantic search to find the article of the day. Each guess reveals subtle clues about your target.">
-  <link rel="canonical" href="https://wiki-guess.com/">
+  <meta name="description" content="Play WikiGuess, a daily game where you use semantic search to find the Wikipedia article of the day. Each guess reveals subtle clues about your target.">
+  <link rel="canonical" href="https://paragraphle.com/">
   <meta property="og:type" content="game" />
-  <meta property="og:title" content="WikiGuess &mdash; Daily Game" />
-  <meta property="og:description" content="Play WikiGuess, a daily game where you use semantic search to find the article of the day. Each guess reveals subtle clues about your target." />
-  <meta property="og:image" content="https://wiki-guess.com/lincoln_portrait.jpg">
+  <meta property="og:title" content="Paragraphle &mdash; Daily Game" />
+  <meta property="og:description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia article of the day. Each guess reveals subtle clues about your target." />
+  <meta property="og:image" content="https://paragraphle.com/lincoln_portrait.jpg">
   <meta property="og:image:width" content="2200">
   <meta property="og:image:height" content="1190">
   <meta name="robots" content="max-image-preview:large">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://wiki-guess.com/lincoln_portrait.jpg">
+  <meta name="twitter:image" content="https://paragraphle.com/lincoln_portrait.jpg">
 
   <link rel="stylesheet" href="tailwind.css">
 </head>
@@ -109,7 +109,7 @@
   <header class="shrink-0 px-4 pt-6 pb-2 w-full max-w-4xl mx-auto select-none">
     <div class="flex items-baseline justify-between mb-2">
       <h1 class="text-xl font-extrabold tracking-tight md:text-2xl">
-        WikiGuess&nbsp;#<span id="dailyNumber"></span>
+        Paragraphle&nbsp;#<span id="dailyNumber"></span>
       </h1>
       <span class="whitespace-nowrap font-semibold text-sm md:text-base">
         Guesses:&nbsp;<span id="guessCount">0</span>
