Add back background image

--- a/play.html
+++ b/play.html
@@ -30,6 +30,8 @@
   <link rel="stylesheet" href="tailwind.css">
 </head>
 
+<img class="hidden absolute" id="lastGuessImage" alt="Background image." src="public/nonplussed-lincoln.jpg"></img>
+
 <body class="h-dvh bg-slate-900 text-white flex flex-col">   
   <!-- Win Modal -->
   <div
