Update play link

--- a/play.html
+++ b/play.html
@@ -1,3 +1,9 @@
+---
+permalink: /play
+title: Play
+layout: null
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,7 +33,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://paragraphle.com/public/nonplussed-lincoln.jpg">
 
-  <link rel="stylesheet" href="../tailwind.css">
+  <link rel="stylesheet" href="tailwind.css">
 </head>
 
 <img class="hidden absolute" id="lastGuessImage" alt="Background image." src="public/nonplussed-lincoln.jpg"></img>
@@ -174,6 +180,6 @@
 
     </div>
   </footer>
-  <script src="../script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
