--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -50,7 +54,7 @@
         Each guess reveals new clues by matching paragraphs from your guess against the article of the day.
       </p>
       <a
-        href="{{ site.baseurl }}/play"
+        href="{{ '/play' | relative_url }}"
         class="inline-flex items-center justify-center px-6 py-3 rounded-xl
               bg-slate-600 text-white font-semibold uppercase tracking-wide
               border-b-4 border-slate-600
