--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
----
-layout: default
----
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,7 +50,7 @@ layout: default
         Each guess reveals new clues by matching paragraphs from your guess against the article of the day.
       </p>
       <a
-        href="{{ '/play' | relative_url }}"
+        href="/play"
         class="inline-flex items-center justify-center px-6 py-3 rounded-xl
               bg-slate-600 text-white font-semibold uppercase tracking-wide
               border-b-4 border-slate-600
