Update image paths

--- a/play/index.html
+++ b/play/index.html
@@ -30,7 +30,7 @@
   <link rel="stylesheet" href="../tailwind.css">
 </head>
 
-<img class="hidden absolute" id="lastGuessImage" alt="Background image." src="public/nonplussed-lincoln.jpg"></img>
+<img class="hidden absolute" id="lastGuessImage" alt="Background image." src="../public/nonplussed-lincoln.jpg"></img>
 
 <body class="h-dvh bg-slate-900 text-white flex flex-col">   
   <!-- Win Modal -->
@@ -65,7 +65,7 @@
         <h2 class="text-2xl font-extrabold tracking-tight leading-tight mb-3">
           You got it!
         </h2>
-        <img class="w-full max-w-2xl object-cover mb-4" id="winImage" alt="Image of daily article." src="public/nonplussed-lincoln.jpg"></img>
+        <img class="w-full max-w-2xl object-cover mb-4" id="winImage" alt="Image of daily article." src="../public/nonplussed-lincoln.jpg"></img>
         <p id="winModalTitle" class="mb-2 text-xl font-bold"></p>
         <p id="winModalDesc" class="text-lg text-sky-50/90">
           Guesses:
