--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://paragraphle.com/public/nonplussed-lincoln.jpg">
 
-  <link rel="stylesheet" href="tailwind.css">
+  <link rel="stylesheet" href="src/tailwind.css">
 </head>
 
 <body class="h-dvh bg-slate-900 text-white flex flex-col">   
@@ -50,7 +50,7 @@
         Each guess reveals new clues by matching paragraphs from your guess against the article of the day.
       </p>
       <a
-        href="/play"
+        href="play"
         class="inline-flex items-center justify-center px-6 py-3 rounded-xl
               bg-slate-600 text-white font-semibold uppercase tracking-wide
               border-b-4 border-slate-600
