--- a/play/index.html
+++ b/play/index.html
@@ -27,7 +27,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://paragraphle.com/public/nonplussed-lincoln.jpg">
 
-  <link rel="stylesheet" href="../tailwind.css">
+  <link rel="stylesheet" href="../src/tailwind.css">
 </head>
 
 <img class="hidden absolute" id="lastGuessImage" alt="Background image." src="../public/nonplussed-lincoln.jpg"></img>
@@ -174,6 +174,6 @@
 
     </div>
   </footer>
-  <script src="../script.js"></script>
+  <script src="../dist/script.js"></script>
 </body>
 </html>
